WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180895
Indexing should only be computed when the new structure has an indexing header.
https://bugs.webkit.org/show_bug.cgi?id=180895
Summary
Indexing should only be computed when the new structure has an indexing header.
Keith Miller
Reported
2017-12-15 17:21:57 PST
Indexing should only be computed the new structure has an indexing header.
Attachments
Patch
(11.37 KB, patch)
2017-12-15 17:22 PST
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.64 KB, patch)
2017-12-15 17:37 PST
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2017-12-15 17:22:41 PST
Created
attachment 329545
[details]
Patch
Saam Barati
Comment 2
2017-12-15 17:26:09 PST
Comment on
attachment 329545
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329545&action=review
r=me
> Source/JavaScriptCore/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > +
Please describe why this crashed on ARM.
Michael Saboff
Comment 3
2017-12-15 17:27:07 PST
Comment on
attachment 329545
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329545&action=review
r=me
> Source/JavaScriptCore/ChangeLog:3 > + Indexing should only be computed the new structure has an indexing header.
Is there a missing *when* in this description?
Keith Miller
Comment 4
2017-12-15 17:37:16 PST
Created
attachment 329546
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2017-12-16 10:20:08 PST
Comment on
attachment 329546
[details]
Patch for landing Clearing flags on attachment: 329546 Committed
r226000
: <
https://trac.webkit.org/changeset/226000
>
WebKit Commit Bot
Comment 6
2017-12-16 10:20:22 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-12-16 10:21:58 PST
<
rdar://problem/36091369
>
David Kilzer (:ddkilzer)
Comment 8
2017-12-17 14:14:40 PST
<
rdar://problem/36078238
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug